--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <head>
-    <title>Andrei Veselov - Contact</title>
+    <title>Andrei Veselov</title>
 </head>
 <body>
     <h1>Andrei Veselov</h1>
     <p>Brno, CZ</p>
     
-    <p>Email: <a href="mailto:andrei@veselov.cc">andrei@veselov.cc</a></p>
-    <p>Telegram: <a href="https://t.me/andyvesel">@andyvesel</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/andyvesel/?locale=en_US">https://www.linkedin.com/in/andyvesel/?locale=en_US</a></p>
+    <p><a href="mailto:andrei@veselov.cc">email</a></p>
+    <p><a href="https://t.me/andyvesel">TG</a></p>
+    <p><a href="https://www.linkedin.com/in/andyvesel/?locale=en_US">https://www.linkedin.com/in/andyvesel/?locale=en_US>LinkedIn</a></p>
 </body>
