--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Andrei Veselov</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+        a {
+            display: block;
+            margin: 5px 0;
+            color: #3498db;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <h1>Andrei Veselov</h1>
     <p>Brno, CZ</p>
-    
-    <p><a href="mailto:andrei@veselov.cc">email</a></p>
-    <p><a href="https://t.me/andyvesel">TG</a></p>
-    <p><a href="https://www.linkedin.com/in/andyvesel/?locale=en_US">https://www.linkedin.com/in/andyvesel/?locale=en_US>LinkedIn</a></p>
+
+    <a href="mailto:andrei@veselov.cc">Email</a>
+    <a href="https://t.me/andyvesel">Telegram</a>
+    <a href="https://www.linkedin.com/in/andyvesel/?locale=en_US">LinkedIn</a>
 </body>
+</html>
