--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <h1>Andrei Veselov</h1>
-    <p>Brno, CZ</p>
+    <h3>Brno, CZ</h3>
 
     <a href="mailto:andrei@veselov.cc">Email</a>
     <a href="https://t.me/andyvesel">Telegram</a>
